kubernetes/apps/infra/forgejo/app/ingress.yaml
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo
spec:
  rules:
    - host: git.home.mattprovost.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo-http
                port:
                  number: 3000
